# telegram-Virus-total

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml
assets/: README.md
scripts/: validate_credentials.py
src/: Procfile  __init__.py  app.py  console_control.py  requirements.txt
src/bot/: __init__.py  routing.py
src/bot/handlers/: files.py  lookups.py  start.py
src/bot/keyboards/: __init__.py  common.py  start.py
src/bot/middleware/: __init__.py  deduplicate.py  rate_limit.py
src/bot/presenters/: file_results.py  lookup_results.py  messages.py
src/config/: logging.py  settings.py
src/domain/: __init__.py  entities.py  enums.py  errors.py  validators.py
src/integrations/: storage.py  telegram_files.py  virustotal_client.py
src/services/: file_scanner.py  lookup_service.py  rate_limiter.py  result_cache.py
tests/: conftest.py
tests/contract/: __init__.py  test_telegram_interface.py  test_virustotal_file_contract.py  test_virustotal_lookup_contract.py
tests/integration/: test_file_flow.py  test_lookup_flow.py  test_onboarding_and_limits.py
tests/unit/: test_console_control.py  test_deduplicate_middleware.py  test_rate_limiter.py  test_telegram_files.py  test_validators.py
